started moving things and trying to get routing/login to work

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 SECRET_KEY='DEVKEY'
 SQLALCHEMY_DATABASE_URI='sqlite:///db.db'
+SQLALCHEMY_TRACK_MODIFICATIONS=True
 DEBUG=True
+SECURITY_USER_IDENTITY_ATTRIBUTES=['username','email']
+SECURITY_FLASH_MESSAGES=False
+SECURITY_PASSWORD_SALT='testhash'
+SECURITY_TOKEN_AUTHENTICATION_HEADER='Auth-Token'
